# pachinball

./: .env.deploy.example  .env.production  .gitignore  .swarm-state.md  AGENTS.md  ANIMATION_AUDIT_FEEDERS.md  ARCHITECTURE.md  ASSETS_GUIDE.md  ASSET_LOD_STREAMING_AUDIT_REPORT.md  BACKBOX_VIDEO_GUIDE.md  CAMERA_AUDIT_HEAD.md  CLAUDE.md  INPUT_ACCESSIBILITY_AUDIT.md  INPUT_AUDIT_MASTER.md  INPUT_HAPTIC_AUDIT.md  INPUT_LATENCY_AUDIT.md  INPUT_RESPONSIVENESS_AUDIT.md  LIGHTING_CAMERA_TUNING.md  LIGHTING_SHADOW_PP_AUDIT_REPORT.md  PHYSICS_PERFORMANCE_AUDIT.md  PHYSICS_ROBUSTNESS_AUDIT.md  PLAN.md  README.md  RENDERING_AUDIT_REPORT.md  deploy.py  deploy_old.py  eslint.config.js  git.sh  grok.md  index.html  package-lock.json  package.json  playwright.config.ts  screenshot.js  test-flippers.mjs  test-flippers2.mjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  (+2 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  native-physics.yml
.playwright-mcp/: page-2026-04-18T02-18-42-144Z.yml  page-2026-05-15T04-16-01-433Z.yml  page-2026-05-20T05-36-56-068Z.yml  page-2026-05-20T05-38-48-687Z.yml  page-2026-05-20T05-41-20-538Z.yml  page-2026-05-20T05-43-42-527Z.yml  page-2026-05-21T07-22-52-004Z.yml  page-2026-05-21T07-31-08-253Z.yml  page-2026-05-21T07-36-40-997Z.yml  page-2026-05-21T07-37-23-897Z.yml
api/: adventure.py
docs/: .swarm-state.md  ADVENTURE_CAMPAIGN.md  AGENT_TASK_EFFECTS_AUDIT.md  ANIMATION_AUDIT_BALL_MOTION.md  ANIMATION_AUDIT_SECONDARY_EFFECTS.md  ARCHITECTURE.md  ASSETS_GUIDE.md  ASYNC_CHALLENGES_EPIC.md  AUDIT_MODE_SWITCH_PORTAL_LOOP.md  AUDIT_TRIAGE_2026-05-07.md  CABINET_GLTF.md  CAMERA_AUDIT_ADVENTURE.md  CAMERA_AUDIT_TABLE.md  CAMERA_INPUT_AUDIT_REPORT.md  CAMERA_SAFETY_AUDIT.md  COLLIDER_LIFECYCLE_AUDIT.md  DAILY_CASCADE.md  DEBUG_HUD_HELPERS.md  DISPLAY_REELS_TELEMETRY.md  ENGINE_BOOTSTRAP.md  FULL_AUDIT_REPORT_CAMPAIGN_LOOP.md  GROK_BUILD_PLAYABLE_CORE_LOOP_PROMPT.md  INPUT_CROSS_DEVICE_AUDIT.md  MATERIAL_PBR_AUDIT_REPORT.md  PHYSICS_AUDIT_MASTER.md  PHYSICS_COLLISION_AUDIT.md  PHYSICS_CONFIG_AUDIT.md  PHYSICS_MOTION_AUDIT.md  PLAN.md  PLAN_CAMPAIGN_LOOP_AUDIT.md  PLAYFIELD_LOAD_API.md  RENDERING_AUDIT_REPORT.md  TESTING.md  TRACK_SCHEMA.md  adventure-cinematic-integration.md  adventure-goal-integration.md  agent-swarm-plan.md  dispatch-2026-07-10.md  dispatch-2026-07-23.md  eventbus-integration-guide.md  (+3 more)
docs/plans/: claude-haiku-plan-next-sprint.md  claude-haiku-prompt-advanced-ball-physics.md  claude-haiku-prompt-advanced-flippers.md  claude-haiku-prompt-new-obstacles.md  claude-haiku-prompt-next-sprint.md  claude-haiku-prompt-physics-optimization.md  claude-haiku-prompt-reactive-lighting.md  claude-haiku-prompt-small-gold-balls.md  claude-haiku-task-adventure-cinematic.md  claude-haiku-task-adventure-tracks.md  claude-haiku-task-drop-targets.md  claude-haiku-task-eventbus-integration.md  claude-haiku-task-launchers-gates.md  kimi-agent-swarm-task-may08.md  kimi-agent-swarm-task-next-sprint.md  kimi-agent-swarm-task-phase1.md  kimi-agent-swarm-task-phase2.md  kimi-agent-swarm-task-rendering-polish.md  kimi-agent-swarm-task-revised-may07.md  kimi-agent-swarm-task.md  kimi-cli-prompt-for-pachinball-next.md  kimi-cli-prompt.md  sound-eventbus-integration.patch
headless_chrome/: screenshot_ingame_final.log.txt
native/: CMakeLists.txt
native/src/: ContactListener.h  MathTypes.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h  bindings.cpp
native/tests/: physics_world_test.cpp  test_helpers.hpp
public/audio/: README.md
public/backbox/: .gitkeep  README.md
scripts/: bench-wasm-flags.mjs  build-wasm-colab.sh  build-wasm.sh  generate-audio-samples.sh  generate-cabinet-placeholders.mjs  generate-pwa-icons.mjs  run-wasm-parity.mjs
src/: config.ts  game.ts  game.ts.new  main.ts  style.css
src/adventure/: adventure-mode.ts  adventure-types.ts  camera-easing.ts  camera-presets.ts  index.ts  portal-routing.ts  track-builder.ts  track-compiler.ts  track-data-registry.ts  track-schema.ts
src/cabinet/: cabinet-builder.ts  cabinet-classic.ts  cabinet-gltf-loader.ts  cabinet-neo.ts  cabinet-types.ts  cabinet-vertical.ts  cabinet-wide.ts  index.ts
src/display/: display-border-glow.ts  display-core.ts  display-image.ts  display-layer-depth.ts  display-lcd-overlay.ts  display-overlay.ts  display-physical.ts  display-reels.ts  display-shader.ts  display-state-machine.ts  display-types.ts  display-video.ts  index.ts  slot-logic.ts  slot-machine.ts  slot-types.ts
src/effects/: cabinet-lighting.ts  celebration-sequencer.ts  effects-atmosphere.ts  effects-audio.ts  effects-cabinet.ts  effects-camera.ts  effects-core.ts  effects-floating.ts  (+15 more)
test-results/: .last-run.json
tests/: adventure-campaign-persistence.test.ts  adventure-progression-supervisor.test.ts  adventure-track-switch.test.ts  audio-sample-bank.test.ts  audio-synth.test.ts  ball-manager.test.ts  ball-save-system.test.ts  basic-gameplay-temp.spec.ts  basic-gameplay.spec.ts  bonus-tally-system.test.ts  cabinet-gltf-lod.test.ts  camera-controller.test.ts  campaign-portal-track-load.spec.ts  campaign-portal-track-load.test.ts  campaign-progression.spec.ts  campaign-rewards-manager.test.ts  campaign-rewards-notifier-and-sequencer.test.ts  campaign-track-goals.test.ts  checkpoint-debug.test.ts  collision-handle-space-scoring.test.ts  combo-multiplier-system.test.ts  combo-system.test.ts  countdown-portal-display.test.ts  daily-cascade-layout.test.ts  debug-toggles-check.spec.ts  display-border-glow.test.ts  display-drain-reaction.test.ts  display-reels-telemetry.spec.ts  display-state-machine.test.ts  display-states.spec.ts  engine-bootstrap.spec.ts  engine-options.test.ts  event-bus.test.ts  feeder-golden-fixtures.test.ts  feeder-test-helpers.ts  fever-scoring.test.ts  free-map-teardown.spec.ts  free-map-test-mode.test.ts  game-physics-controller-interpolation.test.ts  game-state.test.ts  (+42 more)
verification/: verify_firewall_breach.py  verify_game.py  verify_lcd.py  verify_pachinko.spec.ts  verify_reels.py  verify_slot.py
(+221 files in other folders)
